# ESG-classification-API

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: black.yml  docker-publish.yml  lint.yml  linter.yml  main.yml
notebooks/: ESGify.ipynb
src/: main.py  test_main.py
src/application_root/static/: index.css
src/application_root/views/: index.html
src/data/: example.py
src/models/: model.py
src/services/: predict_service.py
tests/: test_main.py
