[tool.poetry]
name = "esgify"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flake8 = "7.0.0"
mccabe = "0.7.0"
pycodestyle = "2.11.1"
pyflakes = "3.2.0"
torch = "^2.3.0"
numpy = "^1.26.4"
transformers = "^4.40.2"
black = "^24.4.2"
fastapi = "^0.111.0"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
